# diplom

./: CMakeLists.txt  bch.cpp  graphic.h  main.cpp  reedmuller.cpp  script.py  test.cpp  viterbi.cpp
BCH/: BchKernel.cpp  BchKernel.h
Channel/: Channel.cpp  Channel.h
Channel/Gaus/: GausChannel.cpp  GausChannel.h
Channel/PerfectGauss/: PerfectGauss.cpp  PerfectGauss.h
Code/: Code.h  PolarCode.cpp  PolarCode.h
Code/CRC/: CrcPolarCode.cpp  CrcPolarCode.h
Code/PolarCode/: PolarCode.cpp  PolarCode.h  PolarCodeWithArikan.cpp  PolarCodeWithArikan.h
Code/PolarCodeWithLargeKernel/: PolarCodeWithLargeKernel.cpp  PolarCodeWithLargeKernel.h
Code/ReedMuller/: ReedMullerCode.cpp  ReedMullerCode.h
Construct/: construct.cpp  construct.h
Decoder/: Decoder.h
Decoder/Perebor/: Perebor.cpp  Perebor.h
Decoder/SC/: SC.cpp  SC.h
Decoder/SCViterbi/: SCViterbi.cpp  SCViterbi.h
Decoder/SCs/: SCBase.cpp  SCBase.h
Decoder/SCs/SC/: SC.cpp  SC.h
Decoder/SCs/SCFlip/: SCFlip.cpp  SCFlip.h  SCFlipArikan.cpp  SCFlipArikan.h  SCFlipViterbi.cpp  SCFlipViterbi.h
Decoder/SCs/SCViterbi/: SCViterbi.cpp  SCViterbi.h
Decoder/viterbi/: Viterbi.cpp  Viterbi.h
Matrix/: Matrix.cpp  Matrix.h
Message/: Message.cpp  Message.h
Polynom/: Polynom.cpp  Polynom.h
Symbol/: Symbol.cpp  Symbol.h
kernels/: 16-1-r.txt  16-1.txt  32-1.txt  frozen-1.txt
utils/: utils.cpp  utils.h
